git-svn-id: https://rs.unfuddle.com/svn/rs_one-net/trunk@8 6715eb51-551b-4bfe-bfcf-ba04cf7c9ab1

--- a/OneMainWeb/Web.config
+++ b/OneMainWeb/Web.config
@@ -186,155 +186,10 @@
     </extensions>
     <serviceHostingEnvironment multipleSiteBindingsEnabled="false" aspNetCompatibilityEnabled="true"/>
   </system.serviceModel>
-
   <location path="adm">
     <system.web>
       <authorization>
-        <allow users="*" />
-      </authorization>
-    </system.web>
-  </location>
-
-  <location path="adm/ContentEdit.aspx">
-    <system.web>
-      <authorization>
-        <allow roles="all" />
-        <deny users="*" />
-      </authorization>
-    </system.web>
-  </location>
-
-  <location path="adm/Structure.aspx">
-    <system.web>
-      <authorization>
-        <allow roles="all" />
-        <deny users="*" />
-      </authorization>
-    </system.web>
-  </location>
-
-  <location path="adm/Publish.aspx">
-    <system.web>
-      <authorization>
-        <allow roles="all" />
-        <deny users="*" />
-      </authorization>
-    </system.web>
-  </location>
-
-  <location path="adm/Forms.aspx">
-    <system.web>
-      <authorization>
-        <allow roles="all" />
-        <deny users="*" />
-      </authorization>
-    </system.web>
-  </location>
-
-  <location path="adm/Faqs.aspx">
-    <system.web>
-      <authorization>
-        <allow roles="all" />
-        <deny users="*" />
-      </authorization>
-    </system.web>
-  </location>
-
-  <location path="adm/Comments.aspx">
-    <system.web>
-      <authorization>
-        <allow roles="all" />
-        <deny users="*" />
-      </authorization>
-    </system.web>
-  </location>
-
-  <location path="adm/Articles.aspx">
-    <system.web>
-      <authorization>
-        <allow roles="all" />
-        <deny users="*" />
-      </authorization>
-    </system.web>
-  </location>
-
-  <location path="adm/PersonalSettings.aspx">
-    <system.web>
-      <authorization>
-        <allow roles="all, admin" />
-        <deny users="*" />
-      </authorization>
-    </system.web>
-  </location>
-
-  <location path="adm/SubscriptionManager.aspx">
-    <system.web>
-      <authorization>
-        <allow roles="all" />
-        <deny users="*" />
-      </authorization>
-    </system.web>
-  </location>
-
-  <location path="adm/dictionary.aspx">
-    <system.web>
-      <authorization>
-        <allow roles="all" />
-        <deny users="*" />
-      </authorization>
-    </system.web>
-  </location>
-
-  <location path="adm/FileManager.aspx">
-    <system.web>
-      <authorization>
-        <allow roles="all" />
-        <deny users="*" />
-      </authorization>
-    </system.web>
-  </location>
-
-  <location path="adm/FileManager2.aspx">
-    <system.web>
-      <authorization>
-        <allow roles="all" />
-        <deny users="*" />
-      </authorization>
-    </system.web>
-  </location>
-
-  <location path="adm/Events.aspx">
-    <system.web>
-      <authorization>
-        <allow roles="all" />
-        <deny users="*" />
-      </authorization>
-    </system.web>
-  </location>
-
-  <location path="adm/Editor.aspx">
-    <system.web>
-      <authorization>
-        <allow roles="all" />
-        <deny users="*" />
-      </authorization>
-    </system.web>
-  </location>
-
-  <location path="adm/users.aspx">
-    <system.web>
-      <authorization>
-        <allow roles="admin" />
-        <deny users="*" />
-      </authorization>
-    </system.web>
-  </location>
-
-  <location path="adm/External.aspx">
-    <system.web>
-      <authorization>
-        <allow roles="all" />
-        <deny users="*" />
+        <deny users="?"/>
       </authorization>
     </system.web>
   </location>
