--- a/OneMainWeb/Web.config
+++ b/OneMainWeb/Web.config
@@ -6,17 +6,24 @@
     <section name="rssConfiguration" type="One.Net.BLL.WebConfig.RssConfiguration" />
     <section name="urlrewritingnet" requirePermission="false" type="UrlRewritingNet.Configuration.UrlRewriteSection, UrlRewritingNet.UrlRewriter" />
   </configSections>
-
+  <rssConfiguration>
+    <providers>
+      <add name="Articles" type="One.Net.BLL.RSSProviderSQL"
+           listItemsMethod="[dbo].[ListArticlesForRss]"
+           listCategoriesMethod="[dbo].[ListArticleCategoriesForRss]"
+           connectionString="MsSqlConnectionString" />
+    </providers>
+  </rssConfiguration>
   <urlrewritingnet rewriteOnlyVirtualUrls="true" contextItemsPrefix="QueryString" xmlns="http://www.urlrewriting.net/schemas/config/2006/07">
     <providers>
 
       <add name="TURLProvider" type="One.NET.BLL.TURLProvider" securityTrimmingEnabled="true" />
     </providers>
     <rewrites>
-      <add name="svetavladarRedir" provider="RegEx" virtualUrl="^/(?!_files)(_.*)+" rewriteUrlParameter="ExcludeFromClientQueryString" destinationUrl="~/site_specific/www.drama.si/$1" redirect="None" ignoreCase="true" />
+      <add name="svetavladarRedir" provider="RegEx" virtualUrl="^/(?!_files)(_.*)+" rewriteUrlParameter="ExcludeFromClientQueryString" destinationUrl="~/site_specific/$1" redirect="None" ignoreCase="true" />
       <add name="AdminRedir" provider="RegEx" virtualUrl="^/adm" rewriteUrlParameter="ExcludeFromClientQueryString" destinationUrl="~/adm/structure.aspx" redirect="None" ignoreCase="true" />
-      <add name="robotsRedir" provider="RegEx" virtualUrl="^/robots.txt" rewriteUrlParameter="ExcludeFromClientQueryString" destinationUrl="~/site_specific/www.drama.si/robots.txt" redirect="None" ignoreCase="true" />
-      <add name="favicoRedir" provider="RegEx" virtualUrl="^/favicon.ico" rewriteUrlParameter="ExcludeFromClientQueryString" destinationUrl="~/site_specific/www.drama.si/favicon.ico" redirect="None" ignoreCase="true" />
+      <add name="robotsRedir" provider="RegEx" virtualUrl="^/robots.txt" rewriteUrlParameter="ExcludeFromClientQueryString" destinationUrl="~/site_specific/robots.txt" redirect="None" ignoreCase="true" />
+      <add name="favicoRedir" provider="RegEx" virtualUrl="^/favicon.ico" rewriteUrlParameter="ExcludeFromClientQueryString" destinationUrl="~/site_specific/favicon.ico" redirect="None" ignoreCase="true" />
       <add name="MainRedirect" provider="TURLProvider"></add>
     </rewrites>
   </urlrewritingnet>
@@ -51,9 +58,9 @@
 
     <sessionState timeout="60" />
     <httpRuntime maxRequestLength="12288" requestValidationMode="2.0" />
-    <customErrors defaultRedirect="~/site_specific/www.drama.si/error.htm" mode="Off">
-      <error statusCode="404" redirect="~/site_specific/www.drama.si/filenotfound.htm" />
-      <error statusCode="403" redirect="~/site_specific/www.drama.si/authorizationfailed.htm" />
+    <customErrors defaultRedirect="~/site_specific/error.htm" mode="Off">
+      <error statusCode="404" redirect="~/site_specific/filenotfound.htm" />
+      <error statusCode="403" redirect="~/site_specific/authorizationfailed.htm" />
     </customErrors>
     <compilation debug="true">
       <assemblies>
@@ -142,14 +149,12 @@
       <add path="*.jpg" name="jpg2" verb="GET,HEAD,POST" type="One.Net.BLL.TImageHandler"/>
       <add path="*.jpeg" name="jpeg2" verb="GET,HEAD,POST" type="One.Net.BLL.TImageHandler"/>
       <add path="*.ico" name="ico2" verb="GET,HEAD,POST" type="One.Net.BLL.TImageHandler"/>
-
-      <add verb="GET" name="CaptchaImage" path="CaptchaImage.axd" type="One.Net.BLL.WebControls.Captcha.ImageHttpHandler" />
     </handlers>
   </system.webServer>
 
   <system.net>
     <mailSettings>
-      <smtp from="info@klop.si">
+      <smtp from="info@renderspace.si">
         <network host="mx.renderspace.si" port="25" defaultCredentials="true" />
       </smtp>
     </mailSettings>
