--- a/OneMainWeb/OneMainWeb.csproj
+++ b/OneMainWeb/OneMainWeb.csproj
@@ -181,6 +181,7 @@
     <Compile Include="adm\WebsiteIIS7.aspx.designer.cs">
       <DependentUpon>WebsiteIIS7.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Base\Section.cs" />
     <Compile Include="CommonModules\ArticleList.ascx.cs">
       <DependentUpon>ArticleList.ascx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
