git-svn-id: https://rs.unfuddle.com/svn/rs_one-net/trunk@11 6715eb51-551b-4bfe-bfcf-ba04cf7c9ab1

--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -188,8 +188,8 @@
     <Compile Include="WebControls\InputWithButton.cs" />
     <Compile Include="WebControls\LabeledCheckBox.cs" />
     <Compile Include="WebControls\ModalPanel.cs" />
+    <Compile Include="WebControls\Pager.cs" />
     <Compile Include="WebControls\PostbackPager.cs" />
-    <Compile Include="WebControls\ProgressBar.cs" />
     <Compile Include="WebControls\TabularMultiView.cs" />
     <Compile Include="WebControls\TabularView.cs" />
     <Compile Include="WebControls\ValidInput.cs" />
