git-svn-id: https://rs.unfuddle.com/svn/rs_one-net/trunk@11 6715eb51-551b-4bfe-bfcf-ba04cf7c9ab1

--- a/OneMainWeb/Web.config
+++ b/OneMainWeb/Web.config
@@ -28,9 +28,9 @@
     </rewrites>
   </urlrewritingnet>
   <appSettings>
-    <add key="aspxTemplatesFolder" value="site_specific/www.drama.si\aspx_templates" />
-    <add key="customModulesFolder" value="site_specific/www.drama.si\custom_modules" />
-    <add key="emailTemplatesFolder" value="site_specific/www.drama.si\email_templates" />
+    <add key="aspxTemplatesFolder" value="site_specific/aspx_templates" />
+    <add key="customModulesFolder" value="site_specific/custom_modules" />
+    <add key="emailTemplatesFolder" value="site_specific/email_templates" />
     <add key="WebSiteId" value="1" />
     <add key="PreferredCulture" value="sl-SI" />
     <add key="PreferredUICulture" value="sl-SI" />
