removed extra settings
git-svn-id: https://rs.unfuddle.com/svn/rs_one-net/trunk@12 6715eb51-551b-4bfe-bfcf-ba04cf7c9ab1

--- a/OneMainWeb/Web.config
+++ b/OneMainWeb/Web.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
 
   <configSections>
@@ -8,10 +8,7 @@
   </configSections>
   <rssConfiguration>
     <providers>
-      <add name="Articles" type="One.Net.BLL.RSSProviderSQL"
-           listItemsMethod="[dbo].[ListArticlesForRss]"
-           listCategoriesMethod="[dbo].[ListArticleCategoriesForRss]"
-           connectionString="MsSqlConnectionString" />
+      <add name="Articles" type="One.Net.BLL.RSSProviderSQL" listItemsMethod="[dbo].[ListArticlesForRss]" listCategoriesMethod="[dbo].[ListArticleCategoriesForRss]" connectionString="MsSqlConnectionString" />
     </providers>
   </rssConfiguration>
   <urlrewritingnet rewriteOnlyVirtualUrls="true" contextItemsPrefix="QueryString" xmlns="http://www.urlrewriting.net/schemas/config/2006/07">
@@ -28,9 +25,6 @@
     </rewrites>
   </urlrewritingnet>
   <appSettings>
-    <add key="aspxTemplatesFolder" value="site_specific/aspx_templates" />
-    <add key="customModulesFolder" value="site_specific/custom_modules" />
-    <add key="emailTemplatesFolder" value="site_specific/email_templates" />
     <add key="WebSiteId" value="1" />
     <add key="PreferredCulture" value="sl-SI" />
     <add key="PreferredUICulture" value="sl-SI" />
@@ -39,12 +33,12 @@
     <add key="CacheDuration" value="3600" />
   </appSettings>
   <connectionStrings>
-    <add name="MsSqlConnectionString" connectionString="server=kit.renderspace.si;uid=drama;pwd=drama;database=drama;Pooling=true;"/>
-    <add name="MsSqlConnectionString13" connectionString=";"/>
-    <add name="MsSqlConnectionStringCustom" connectionString="server=kit.renderspace.si;uid=drama;pwd=drama;database=drama-custom;Pooling=true;"/>
-    <add name="ProfileSqlConnectionString" connectionString="server=KIT.renderspace.si;uid=auth;pwd=auth;database=AuthManager;Pooling=true;"/>
+    <add name="MsSqlConnectionString" connectionString="server=kit.renderspace.si;uid=drama;pwd=drama;database=drama;Pooling=true;" />
+    <add name="MsSqlConnectionString13" connectionString=";" />
+    <add name="MsSqlConnectionStringCustom" connectionString="server=kit.renderspace.si;uid=drama;pwd=drama;database=drama-custom;Pooling=true;" />
+    <add name="ProfileSqlConnectionString" connectionString="server=KIT.renderspace.si;uid=auth;pwd=auth;database=AuthManager;Pooling=true;" />
     <add name="MsSqlConnectionStringCrawler" connectionString="server=KIT.renderspace.si;uid=crawler;pwd=crawler;database=Crawler;Pooling=true;" />
-    <add name="Bamboo" connectionString="server=kit.renderspace.si;uid=drama;pwd=drama;database=drama-custom;Pooling=true;"/>
+    <add name="Bamboo" connectionString="server=kit.renderspace.si;uid=drama;pwd=drama;database=drama-custom;Pooling=true;" />
   </connectionStrings>
   <system.web>
     <globalization uiCulture="sl-SI" culture="sl-SI" />
@@ -138,17 +132,17 @@
   </system.web>
 
   <system.webServer>
-    <validation validateIntegratedModeConfiguration="false"/>
+    <validation validateIntegratedModeConfiguration="false" />
     <modules runAllManagedModulesForAllRequests="true">
-      <remove name="UrlRewriteModule"/>
-      <add name="UrlRewriteModule" type="UrlRewritingNet.Web.UrlRewriteModule, UrlRewritingNet.UrlRewriter"/>
+      <remove name="UrlRewriteModule" />
+      <add name="UrlRewriteModule" type="UrlRewritingNet.Web.UrlRewriteModule, UrlRewritingNet.UrlRewriter" />
     </modules>
     <handlers>
-      <add path="*.gif" name="gif2" verb="GET,HEAD,POST" type="One.Net.BLL.TImageHandler"/>
-      <add path="*.png" name="png2" verb="GET,HEAD,POST" type="One.Net.BLL.TImageHandler"/>
-      <add path="*.jpg" name="jpg2" verb="GET,HEAD,POST" type="One.Net.BLL.TImageHandler"/>
-      <add path="*.jpeg" name="jpeg2" verb="GET,HEAD,POST" type="One.Net.BLL.TImageHandler"/>
-      <add path="*.ico" name="ico2" verb="GET,HEAD,POST" type="One.Net.BLL.TImageHandler"/>
+      <add path="*.gif" name="gif2" verb="GET,HEAD,POST" type="One.Net.BLL.TImageHandler" />
+      <add path="*.png" name="png2" verb="GET,HEAD,POST" type="One.Net.BLL.TImageHandler" />
+      <add path="*.jpg" name="jpg2" verb="GET,HEAD,POST" type="One.Net.BLL.TImageHandler" />
+      <add path="*.jpeg" name="jpeg2" verb="GET,HEAD,POST" type="One.Net.BLL.TImageHandler" />
+      <add path="*.ico" name="ico2" verb="GET,HEAD,POST" type="One.Net.BLL.TImageHandler" />
     </handlers>
   </system.webServer>
 
@@ -170,7 +164,7 @@
     <behaviors>
       <serviceBehaviors>
         <behavior name="myBehavior">
-          <serviceDebug includeExceptionDetailInFaults="true"/>
+          <serviceDebug includeExceptionDetailInFaults="true" />
           <!--<serviceAuthorization principalPermissionMode="UseAspNetRoles" roleProviderName="NikondaRoleManager">
             <authorizationPolicies>
               <add policyType="Nikonda.Scaffold.Core.Web.MembershipAuthorizationPolicy, Nikonda.Scaffold.Core, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null"/>
@@ -186,16 +180,24 @@
     </behaviors>
     <extensions>
       <behaviorExtensions>
-        <add name="NewtonsoftJsonBehavior" type="Newtonsoft.Json.Extensions.NewtonsoftJsonBehavior, NewtonsoftJsonExtensions, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null"/>
+        <add name="NewtonsoftJsonBehavior" type="Newtonsoft.Json.Extensions.NewtonsoftJsonBehavior, NewtonsoftJsonExtensions, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null" />
       </behaviorExtensions>
     </extensions>
-    <serviceHostingEnvironment multipleSiteBindingsEnabled="false" aspNetCompatibilityEnabled="true"/>
+    <serviceHostingEnvironment multipleSiteBindingsEnabled="false" aspNetCompatibilityEnabled="true" />
   </system.serviceModel>
   <location path="adm">
     <system.web>
       <authorization>
-        <deny users="?"/>
+        <deny users="?" />
       </authorization>
     </system.web>
   </location>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
