--- a/OneMainWeb/packages.config
+++ b/OneMainWeb/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="jQuery" version="2.1.1" targetFramework="net45" />
+  <package id="jQuery.UI.Combined" version="1.10.4" targetFramework="net45" />
+  <package id="jQuery.Validation" version="1.12.0" targetFramework="net45" />
   <package id="log4net" version="2.0.3" />
   <package id="UrlRewritingNet" version="2.0.6.1" targetFramework="net45" />
 </packages>
