--- a/OneMainWeb/adm/web.config
+++ b/OneMainWeb/adm/web.config
@@ -28,6 +28,15 @@
     </system.web>
   </location>
 
+  <location path="Scaffold.aspx">
+    <system.web>
+      <authorization>
+        <allow roles="all" />
+        <deny users="*" />
+      </authorization>
+    </system.web>
+  </location>
+
   <location path="Forms.aspx">
     <system.web>
       <authorization>
