--- a/OneMainWeb/packages.config
+++ b/OneMainWeb/packages.config
@@ -3,6 +3,6 @@
   <package id="jQuery" version="2.1.1" targetFramework="net45" />
   <package id="jQuery.UI.Combined" version="1.10.4" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.12.0" targetFramework="net45" />
-  <package id="log4net" version="2.0.3" />
+  <package id="log4net" version="2.0.3" targetFramework="net45" />
   <package id="UrlRewritingNet" version="2.0.6.1" targetFramework="net45" />
 </packages>
