--- a/OneMainWeb/adm/web.config
+++ b/OneMainWeb/adm/web.config
@@ -1,6 +1,14 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <configuration>
 
+  <location path="css/adminWikiMenu.css">
+    <system.web>
+      <authorization>
+        <allow users="*" />
+      </authorization>
+    </system.web>
+  </location>
+
   <location path="ContentEdit.aspx">
     <system.web>
       <authorization>
