git-svn-id: https://rs.unfuddle.com/svn/rs_one-net/trunk@41 6715eb51-551b-4bfe-bfcf-ba04cf7c9ab1

--- a/OneMainWeb/OneMainWeb.csproj
+++ b/OneMainWeb/OneMainWeb.csproj
@@ -840,7 +840,9 @@
     <EmbeddedResource Include="Res\Sql\4_stored_procedures.sql.template" />
     <EmbeddedResource Include="Res\Sql\5_security.sql.template" />
     <EmbeddedResource Include="Res\Sql\1_1_user.sql.template" />
-    <Content Include="adm\web.config" />
+    <Content Include="adm\web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <None Include="Properties\PublishProfiles\Profile1.pubxml" />
     <None Include="Properties\PublishProfiles\Disk.pubxml" />
   </ItemGroup>
