--- a/OneMainWeb/Web.config
+++ b/OneMainWeb/Web.config
@@ -25,7 +25,7 @@
     </rewrites>
   </urlrewritingnet>
   <appSettings>
-    <add key="WebSiteId" value="1" />
+    <add key="WebSiteId" value="7" />
     <add key="PreferredCulture" value="sl-SI" />
     <add key="PreferredUICulture" value="sl-SI" />
     <add key="PublishRoleMapping" value="publisher" />
@@ -33,7 +33,8 @@
     <add key="CacheDuration" value="3600" />
   </appSettings>
   <connectionStrings>
-    <add name="MsSqlConnectionString" connectionString="server=kit.renderspace.si;uid=drama;pwd=drama;database=drama;Pooling=true;" />
+    <!-- add name="MsSqlConnectionString" connectionString="server=kit.renderspace.si;uid=drama;pwd=drama;database=drama;Pooling=true;" / -->
+    <add name="MsSqlConnectionString" connectionString="server=tartar.netinet.si;uid=zrsz;pwd=zrsz;database=zrsz;Pooling=true;" />
     <add name="MsSqlConnectionString13" connectionString=";" />
     <add name="MsSqlConnectionStringCustom" connectionString="server=kit.renderspace.si;uid=drama;pwd=drama;database=drama-custom;Pooling=true;" />
     <add name="ProfileSqlConnectionString" connectionString="server=KIT.renderspace.si;uid=auth;pwd=auth;database=AuthManager;Pooling=true;" />
