git-svn-id: https://rs.unfuddle.com/svn/rs_one-net/trunk@55 6715eb51-551b-4bfe-bfcf-ba04cf7c9ab1

--- a/OneMainWeb/adm/web.config
+++ b/OneMainWeb/adm/web.config
@@ -12,7 +12,7 @@
   <location path="ContentEdit.aspx">
     <system.web>
       <authorization>
-        <allow roles="all" />
+        <allow roles="all, ContentEdit" />
         <deny users="*" />
       </authorization>
     </system.web>
@@ -21,7 +21,7 @@
   <location path="Structure.aspx">
     <system.web>
       <authorization>
-        <allow roles="all" />
+        <allow roles="all, Structure" />
         <deny users="*" />
       </authorization>
     </system.web>
@@ -30,7 +30,7 @@
   <location path="Publish.aspx">
     <system.web>
       <authorization>
-        <allow roles="all" />
+        <allow roles="all, Publish" />
         <deny users="*" />
       </authorization>
     </system.web>
@@ -39,7 +39,7 @@
   <location path="Scaffold.aspx">
     <system.web>
       <authorization>
-        <allow roles="all" />
+        <allow roles="all, Scaffold" />
         <deny users="*" />
       </authorization>
     </system.web>
@@ -48,25 +48,7 @@
   <location path="Forms.aspx">
     <system.web>
       <authorization>
-        <allow roles="all" />
-        <deny users="*" />
-      </authorization>
-    </system.web>
-  </location>
-
-  <location path="Faqs.aspx">
-    <system.web>
-      <authorization>
-        <allow roles="all" />
-        <deny users="*" />
-      </authorization>
-    </system.web>
-  </location>
-
-  <location path="Comments.aspx">
-    <system.web>
-      <authorization>
-        <allow roles="all" />
+        <allow roles="all, Forms" />
         <deny users="*" />
       </authorization>
     </system.web>
@@ -75,16 +57,7 @@
   <location path="Articles.aspx">
     <system.web>
       <authorization>
-        <allow roles="all" />
-        <deny users="*" />
-      </authorization>
-    </system.web>
-  </location>
-
-  <location path="PersonalSettings.aspx">
-    <system.web>
-      <authorization>
-        <allow roles="all, admin" />
+        <allow roles="all, Articles" />
         <deny users="*" />
       </authorization>
     </system.web>
@@ -93,7 +66,7 @@
   <location path="SubscriptionManager.aspx">
     <system.web>
       <authorization>
-        <allow roles="all" />
+        <allow roles="all, subscriptions" />
         <deny users="*" />
       </authorization>
     </system.web>
@@ -102,7 +75,7 @@
   <location path="dictionary.aspx">
     <system.web>
       <authorization>
-        <allow roles="all" />
+        <allow roles="all, dictionary" />
         <deny users="*" />
       </authorization>
     </system.web>
@@ -111,7 +84,7 @@
   <location path="FileManager.aspx">
     <system.web>
       <authorization>
-        <allow roles="all" />
+        <allow roles="all, FileManager" />
         <deny users="*" />
       </authorization>
     </system.web>
@@ -120,16 +93,7 @@
   <location path="FileManager2.aspx">
     <system.web>
       <authorization>
-        <allow roles="all" />
-        <deny users="*" />
-      </authorization>
-    </system.web>
-  </location>
-
-  <location path="Events.aspx">
-    <system.web>
-      <authorization>
-        <allow roles="all" />
+        <allow roles="all, FileManager" />
         <deny users="*" />
       </authorization>
     </system.web>
@@ -138,16 +102,7 @@
   <location path="Editor.aspx">
     <system.web>
       <authorization>
-        <allow roles="all" />
-        <deny users="*" />
-      </authorization>
-    </system.web>
-  </location>
-
-  <location path="users.aspx">
-    <system.web>
-      <authorization>
-        <allow roles="admin" />
+        <allow roles="all, admin" />
         <deny users="*" />
       </authorization>
     </system.web>
@@ -156,7 +111,43 @@
   <location path="External.aspx">
     <system.web>
       <authorization>
-        <allow roles="all" />
+        <allow roles="all, external" />
+        <deny users="*" />
+      </authorization>
+    </system.web>
+  </location>
+
+  <location path="Redirects.aspx">
+    <system.web>
+      <authorization>
+        <allow roles="admin, all, Redirects" />
+        <deny users="*" />
+      </authorization>
+    </system.web>
+  </location>
+
+  <location path="SqlEditor.aspx">
+    <system.web>
+      <authorization>
+        <allow roles="admin" />
+        <deny users="*" />
+      </authorization>
+    </system.web>
+  </location>
+
+  <location path="Website.aspx">
+    <system.web>
+      <authorization>
+        <allow roles="admin" />
+        <deny users="*" />
+      </authorization>
+    </system.web>
+  </location>
+
+  <location path="WebsiteIIS7.aspx">
+    <system.web>
+      <authorization>
+        <allow roles="admin" />
         <deny users="*" />
       </authorization>
     </system.web>
