--- a/OneMainWeb/adm/web.config
+++ b/OneMainWeb/adm/web.config
@@ -12,7 +12,7 @@
   <location path="ContentEdit.aspx">
     <system.web>
       <authorization>
-        <allow roles="all, ContentEdit" />
+        <allow roles="all, ContentEdit, Content" />
         <deny users="*" />
       </authorization>
     </system.web>
