--- a/OneMainWeb/Web.config
+++ b/OneMainWeb/Web.config
@@ -17,6 +17,7 @@
       <add name="TURLProvider" type="One.NET.BLL.TURLProvider" securityTrimmingEnabled="true" />
     </providers>
     <rewrites>
+      <add name="backslashRedir" provider="RegEx" virtualUrl="~/(.*)/$" rewriteUrlParameter="ExcludeFromClientQueryString" destinationUrl="~/$1" redirect="Application" ignoreCase="true" />
       <add name="svetavladarRedir" provider="RegEx" virtualUrl="^/(?!_files)(_.*)+" rewriteUrlParameter="ExcludeFromClientQueryString" destinationUrl="~/site_specific/$1" redirect="None" ignoreCase="true" />
       <add name="AdminRedir" provider="RegEx" virtualUrl="^/adm" rewriteUrlParameter="ExcludeFromClientQueryString" destinationUrl="~/adm/structure.aspx" redirect="None" ignoreCase="true" />
       <add name="robotsRedir" provider="RegEx" virtualUrl="^/robots.txt" rewriteUrlParameter="ExcludeFromClientQueryString" destinationUrl="~/site_specific/robots.txt" redirect="None" ignoreCase="true" />
